--- a/mod.ini
+++ b/mod.ini
@@ -7,7 +7,7 @@ Date="23/04/2024"
 AuthorURL="https://twitter.com/TheKoldK1"
 
 [Main]
-UpdateServer=""
+UpdateServer="https://raw.githubusercontent.com/TheKoldK1/Logo-Only-Title-Screen/master"
 SaveFile=""
 ID="k1.logo.only"
 IncludeDir0="."
